--- a/src/main/resources/assets/rotp_cr/lang/en_us.json
+++ b/src/main/resources/assets/rotp_cr/lang/en_us.json
@@ -7,5 +7,8 @@
   "action.rotp_cr.chariot_requiem_barrage": "Punch Barrage",
   "action.rotp_cr.chariot_requiem_block": "Block",
   "action.rotp_cr.chariot_requiem_virus": "Initiate Virus",
-  "action.rotp_cr.chariot_requiem_aura": "Dream Aura"
+  "action.rotp_cr.chariot_requiem_stand_virus": "Initiate Meteorite Virus",
+  "action.rotp_cr.chariot_requiem_aura": "Dream Aura",
+  "action.rotp_cr.chariot_requiem_remove_stand": "Remove Stand",
+  "effect.rotp_cr.chariot_virus_effect": "Requiem's Virus"
 }
